# rse-grand-challenge-forge

./: .gitattributes  .gitignore  .pre-commit-config.yaml  HISTORY.md  README.md  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: ci.yml
challenge_forge/: cli.py  exceptions.py  forge.py  schemas.py
grand_challenge_forge/: cli.py  forge.py  generation_utils.py  quality_control.py  schemas.py  utils.py
grand_challenge_forge/partials/: filters.py
grand_challenge_forge/partials/algorithm-template/: README.md.j2  inference.py.j2
grand_challenge_forge/partials/algorithm-template-readme/: README.md.j2
grand_challenge_forge/partials/algorithm-template/model/: README.md
grand_challenge_forge/partials/docker-bash-scripts/: do_build.sh.j2  do_save.sh.j2  do_test_run.sh.j2
grand_challenge_forge/partials/example-algorithm/: do_build.sh.j2  do_save.sh.j2  do_test_run.sh.j2  inference.py.j2  save.sh.j2  test_run.sh.j2
grand_challenge_forge/partials/example-algorithm/example-algorithm{{cookiecutter._}}/: Dockerfile  (+5 more)
grand_challenge_forge/partials/example-evaluation-method/: do_save.sh.j2  evaluate.py.j2  helpers.py  requirements.txt.j2  save.sh.j2  test_run.sh.j2
grand_challenge_forge/partials/upload-to-archive-script/: upload_files.py.j2
tests/: conftest.py  test_algorithm_template_generation.py  test_context_validators.py  test_evaluate_helpers.py  test_force.py  test_generation_utils.py  test_jinja2_environment.py  test_pack_generation.py  test_quality_control.py  test_valid_context.py  utils.py
tests/resources/non_partials_source_dir/: template.j2
(+22 files in other folders)
